@@ -716,6 +716,11 @@ Bug fixes
 * LUCENE-3589: BytesRef copy(short) didnt set length.
   (Peter Chang via Robert Muir)
 
+Documentation
+
+* LUCENE-3958: Javadocs corrections for IndexWriter.
+  (Iulius Curt via Robert Muir)
+
 ======================= Lucene 3.6.0 =======================
 
 Changes in backwards compatibility policy
